Fix search css when focused on mobile

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -372,21 +372,19 @@ input[type=text][readonly] {
       width: 96%;
       margin-left: 2%;
     }
-    
-    .ga-search-input-container:after {
-      left: 1.2em;
-      color: #666;
+
+    input, .icon-search {
+      margin-left: 2%;
+    }
+
+    .icon-remove-sign {
+      margin-right: 2%;
     }
       
     .ga-search-dropdown {
       top: 37px !important;
       border-width: 1px 0;
       padding: 0;
-    }
-
-    .icon-remove-sign {
-      right: 0;
-      padding: 0 .5em;
     }
   }
 }
